# desktop-icons-neo

./: HISTORY.md  README.md  askConfirmPopup.js  askNamePopup.js  askRenamePopup.js  dbusUtils.js  desktopGrid.js  desktopIconsUtil.js  desktopManager.js  desktopicons-neo.js  ding.js  emulateX11WindowType.js  enums.js  export-zip.sh  extension.js  fileItem.js  kill.py  local_install.sh  meson.build  meson_post_install.py  metadata.json  neo.diff  preferences.js  prefs.js  set-permissions.sh  showErrorPopup.js  stylesheet.css  templateManager.js
po/: LINGUAS  POTFILES.in  be.po  ca.po  cs.po  da.po  de.po  ding.pot  es.po  fi.po  fr.po  fur.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  nl.po  pl.po  pt_BR.po  ru.po  sk.po  sv.po  tr.po  untitled.pot  zh_CN.po  zh_TW.po
schemas/: meson.build  org.gnome.shell.extensions.desktopicons-neo.gschema.xml  org.gnome.shell.extensions.ding.gschema.xml
